crates/eml_cli/tests/snapshots/integration__ui__run@records__construction.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/records/construction.em
---
--- stdout ---
ann is 30
bob is 41
30
True
--- stderr ---
