crates/eml_cli/tests/snapshots/integration__ui__run@records__generic_update_match.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/records/generic_update_match.em
---
--- stdout ---
43
abc
42
1
--- stderr ---
