crates/eml_cli/tests/snapshots/integration__ui__run@records__lambda_arguments.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/records/lambda_arguments.em
---
--- stdout ---
["ann", "bob"]
[30, 41]
["ann!", "bob!"]
[31, 42]
--- stderr ---
