crates/eml_cli/tests/snapshots/integration__ui__run@records__leading_commas.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/records/leading_commas.em
---
--- stdout ---
Ada 37
--- stderr ---
