crates/eml_cli/tests/snapshots/integration__ui__run@records__linear_field_destructure.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/records/linear_field_destructure.em
---
--- stdout ---
build: hello from a file
--- stderr ---
