crates/eml_cli/tests/snapshots/integration__ui__run@records__modules.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/records/modules/main.em
---
--- stdout ---
3
6
--- stderr ---
