crates/eml_cli/tests/snapshots/integration__ui__run@records__partial_constructor.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/records/partial_constructor.em
---
--- stdout ---
[Person { name = "a", age = 1 }, Person { name = "a", age = 2 }, Person { name = "a", age = 3 }]
--- stderr ---
