crates/eml_cli/tests/snapshots/integration__ui__run@records__sum_types.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/records/sum_types.em
---
--- stdout ---
12
12
7
--- stderr ---
